fix button alignment

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -37,6 +37,7 @@ body {
     flex: 1; /* Each box will take up equal width */
     margin: 20px;
     padding: 20px;
+    padding-bottom: 100px;
     position: relative;
     text-align: center;
     flex-direction: column;
@@ -162,11 +163,6 @@ input[type=text] {
   height: 100px;
   font-size: 48px;
   text-align: center;
-
-  &::placeholder {
-    font-size: 20px; /* Placeholder text color */
-    font-family: 'NotoSans';
-  }
 }
 
 button {
@@ -211,6 +207,7 @@ button.print{
   color: #000000;
   font-size: 24px;
   position: absolute;
+  transform: translateX(-50%);
   align-self: center;
   bottom: 20px;
   margin-top: auto;
